added tweet button

--- a/Code/tweet-gen/templates/index.html
+++ b/Code/tweet-gen/templates/index.html
@@ -11,7 +11,7 @@
         </div>
         <form action="/{{ sentence }}" method="post">
             <!-- <a -->
-            <button class='btn btn-primary' data-toggle="tooltip" data-placement="top" title="Save this Tweet?"onclick="window.location='/{{ sentence }}'">Save Tweet</button>
+            <button class='btn btn-primary' data-toggle="tooltip" data-placement="top" title="Save and Tweet this Tweet?"onclick="window.location='/{{ sentence }}'">Save Tweet</button>
             <!-- </a> -->
             <script>
                 $(document).ready(function(){
