rewrote 1st order markov chain

--- a/Code/tweet-gen/templates/index.html
+++ b/Code/tweet-gen/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <center>
     <h1>placeholder Tweet Generator</h1>
-    <p>{{ sentence }}</p>
+    <p><font color=color>{{ sentence }}</font></p>
     <br>
         <div class='form-group' action="/">
             <button class='btn btn-primary' data-toggle="tooltip" data-placement="top" title="New Tweet?" onClick="window.location.reload()">New Tweet</button>
